Fixed overflow and changed background picture for portfolio

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,7 +3,7 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-    background-image: url("https://images.unsplash.com/photo-1533271802434-53997a5f9e6c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("https://images.unsplash.com/photo-1472173148041-00294f0814a2?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 	background-size: cover;
 }
 
@@ -112,6 +112,10 @@ nav li a:hover {
 }
 
 /* Sections */
+#welcome:hover{
+	transform: scale(1);
+	transition: transform 0.5s;
+}
 section {
 	padding: 20px;
 }
